# Home_Credit_Project

./: .gitignore  README.md  projektplan.md  pyproject.toml
experiments/: ext_fill.py  submission_tryouts.ipynb
notebooks/: 01_eda.ipynb  02_eda_app_train.ipynb  03_feature_engineering.ipynb  03_feature_engineering.py  04_feature_selection_handcrafted.ipynb  05_auto_feature_search.ipynb  05_feature_selection.ipynb  06_auto_feature_search.ipynb  06_hpo_all_models.ipynb  07_ensembling.ipynb
src/: eda_utils.py  feature_selection_utils.py
src/creditutils/: eda_utils.py  feature_selection_utils.py  hpo_utils.py  path_utils.py
submissions/: 01_submission_catboost_baseline.csv  01_submission_lgbm_baseline.csv  01_submission_xgboost_baseline.csv  submission_stacked.csv  submission_stacked_cat.csv  submission_stacked_lgb.csv  submission_stacked_xgb.csv
